--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
-  "singleQuote": true,
-  "semi": true,
-  "trailingComma": "all",
+  "useTabs": false,
   "tabWidth": 2,
-  "printWidth": 80
+  "printWidth": 90,
+  "singleQuote": true,
+  "trailingComma": "all",
+  "arrowParens": "always"
 }
