--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "format": "prettier --write  '*.{json,js}' 'src/**/*.{js,ts}' 'test/**/*.{js,ts}'",
     "lint": "eslint --max-warnings=0 src --fix && prettier --check '*.{json,js}' 'src/**/*.{js,ts}' 'test/**/*.{js,ts}'",
     "test": "jest --config jestconfig.json --verbose",
-    "dev": "miniflare --live-reload dist/worker.js"
+    "dev": "miniflare --live-reload dist/worker.js --kv USER"
   },
   "author": "Nam Dao",
   "license": "MIT",
