--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,6 +11,10 @@ command = "npm install && npm run build"
 [build.upload]
 format = "service-worker"
 
+kv_namespaces = [
+    { binding = "USER", id = "cd62918c9e2843e0ad15ee009cb476e8" }
+]
+
 # [secrets]
 # PUBLIC_KEY
 # PRIVATE_KEY
